fixed list widget does not stretch full width added auto hight flag to force auto height when using a layout report or not added missing padding to section

--- a/src/components/Sections/SectionList.less
+++ b/src/components/Sections/SectionList.less
@@ -1,4 +1,6 @@
 .section-list {
+  display: table;
+  width: 100%;
   .list-item {
     display: table-row !important;
     align-items: center;
